# portfolio

./: .env.example  .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  jest.config.js  next.config.js  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: backend.yml  pull_request.yaml  test.yaml
.husky/: pre-commit
.storybook/: main.js  preview.js
api/spotify/: me.rs
backend/: Cargo.toml  Shuttle.toml
backend/.sqlx/: query-0b3eb97cd606ad8f41d2b2d58ef0b91c17b92dbc55cfff29318affe956c5e3f8.json  query-288e1b2b4285c0e2a997d435102e9e674d49cf0cae0a80e18eb93a8c5c95bc96.json  query-3fac3fd69059a36e8f51551a3062f0bf3c89dd7800f08014eb23e03285cd78b8.json  query-7b14d375af595647bba05378978379dc20a980570db9050cf33f973bbfd9c2b5.json  query-7b539d133593252c7972dd18ee8774ad38622b77434a0926b5befb7172abceae.json  query-a704a85fcc61ab06d7f5a4b1a3ddb5d6bb592885f002bf76a6009b810eb98963.json  query-af5af589e2d0297b2e7b35d28c3abcdf0491b4ade969b0231450f462dfff7c91.json  query-b1c8659e5d8848fbbdc80b9e04e87fa76b5e3b9cbba6dffd74ea8be0a59293b5.json  query-b7750d454bede215a0ea13915b67e7a8a9760499503eea1a96b42aa5c98f1e57.json
backend/migrations/: 0001_init.sql  0002_init.sql
backend/src/: errors.rs  main.rs  routes.rs
backend/src/domain/models/: authentication.rs  mod.rs  post.rs  user.rs
backend/src/handlers/: mod.rs
backend/src/handlers/authentication/: login.rs  mod.rs  register.rs  token.rs
backend/src/handlers/posts/: create_post.rs  delete_post.rs  get_post.rs  list_posts.rs  mod.rs  update_post.rs
backend/src/infra/: errors.rs  mod.rs
backend/src/infra/repositories/: authentication_repository.rs  mod.rs  post_repository.rs  user_repository.rs
backend/src/utils/extractors/: json_transformer.rs  mod.rs
e2e/pages/: home.spec.ts
locales/: en.json  pt-br.json
src/: auth.ts  env.ts  i18n.ts  middleware.ts
src-rs/app/: Cargo.toml
src-rs/app/src/services/: mod.rs
src-rs/next_api/: Cargo.toml
src/@types/: github-content.ts  github-repo.ts  intl.d.ts  position.ts  spotify-response.ts  technology.ts  theme.d.ts  user.ts
src/app/: head.tsx  layout.tsx  page.tsx
src/components/: IconsContainer.tsx  Spotify.tsx  animated-appbar.tsx  cascade-animation.tsx  circle.tsx  dashboard-header.tsx  dashboard-navbar.tsx  hide-on-scroll.tsx  job-details-card.tsx  language-switch.tsx  link.tsx  loading-widget.tsx  menu-button.tsx  mobile-menu.tsx  nav-button.tsx  post-form.tsx  posts-grid.tsx  profile-menu.tsx  signin-form.tsx  social-links.tsx  spotify-watcher.tsx  technology-list.tsx  title-with-color.tsx  toggle-theme-button.tsx
src/constants/: github.ts  routes.ts  routes.tsx  seo.ts  technologies.tsx
(+124 files in other folders)
