[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_derive = "1.0.208"
serde_json = { version = "1.0.125", features = ["raw_value"] }
signal-hook = "0.3.17"
tokio = { version = "1.39.3", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
vercel_runtime = "1.1.4"
reqwest = "0.12.7"
tracing-subscriber = "0.3.18"
base64 = "0.22.1"
chrono = "0.4.38"
once_cell = "1.19.0"

[[bin]]
name = "me"
path = "api/spotify/me.rs"