[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde_json = { version = "1.0.125", features = ["raw_value"] }
tokio = { version = "1.39.3", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
vercel_runtime = "1.1.4"
tracing-subscriber = "0.3.18"
next_api = { path = "src-rs/next_api" }

[[bin]]
name = "me"
path = "api/spotify/me.rs"
