[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
axum-macros = "0.4.1"
tower-http = { version = "0.5.2", features = ["cors"] }
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "macros", "chrono"] }
tokio = "1.28.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
reqwest = "0.12.7"
