[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
vercel_runtime = "1.1.4"
reqwest = "0.12.7"
base64 = "0.22.1"
serde_derive = "1.0.208"
chrono = "0.4.38"
once_cell = "1.19.0"